// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.textarea $ariaDetails 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $ariaDetails 2`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $ariaSpeak 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="my-test-id txt2 my-test-id2"
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  >
    Hello
  </section>
</wup-textarea>
`;

exports[`control.textarea $ariaSpeak 2`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="my-test-id my-test-id2"
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $show/$hide error 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea $show/$hide error 2`] = `
<wup-textarea
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt2"
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="opacity: 0;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea $show/$hide error 3`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea common tests render + styles 1`] = `<wup-textarea />`;

exports[`control.textarea common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height:1px; width:1px;
overflow:hidden;
clip:rect(1px,1px,1px,1px);
min-width:initial;
padding:0;}

  
[wup-icon] {
  display: inline-block;
  cursor: pointer;
  box-shadow: none;
  border: none;
  margin: 0;
  padding: 0;
  width: var(--icon-hover-r, 2em);
  height: var(--icon-hover-r, 2em);
  background: none;
  outline: none;
  border-radius: 50%;
}
[wup-icon]:after {
  content: "";
  display: inline-block;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  background: var(--icon, #000);
  -webkit-mask-size: var(--icon-size, 1em);
  mask-size: var(--icon-size, 1em);
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-position: center;
  mask-position: center;

  -webkit-mask-image: var(--icon-img);
  mask-image: var(--icon-img);
}
[wup-icon]:focus {
   box-shadow: inset 0 0 0 99999px var(--icon-focus-bg);
}
[wup-icon]:focus:after {
   background: var(--icon-hover, var(--icon, #000));
}
@media (hover: hover) and (pointer: fine) {
  [wup-icon]:hover {
   box-shadow: inset 0 0 0 99999px var(--icon-hover-bg);
  }
  [wup-icon]:hover:after {
    background: var(--icon-hover, var(--icon, #000));
  }
  [wup-icon]:focus:hover {
   opacity: 0.9;
  }
}

  :root {
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --base-btn3-bg: none;
          --base-btn3-text: inherit;
          --base-sep: #e4e4e4;
          --border-radius: 6px;
          --anim-time: 200ms;
          --anim: var(--anim-time) cubic-bezier(0, 0, 0.2, 1) 0ms;
          --icon-hover-r: 30px;
          --icon-hover-bg: #0001;
          --icon-focus-bg: #0002;
          --icon-size: 14px;
        }
        [wupdark] {
          --base-btn-focus: #bdbdbd;
          --base-sep: #141414;
          --icon: #fff;
          --icon-hover-bg: #fff1;
          --icon-focus-bg: #fff2;
          --scroll: #fff2;
          --scroll-hover: #fff3;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--ctrl-focus);
        --ctrl-selected: var(--ctrl-focus);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl: inherit;
        --ctrl-bg: #fff;
        --ctrl-border: #e6e6e6;
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
        --wup-icon-back: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='m509.8 16.068-329.14 329.14c-21.449 21.449-21.449 56.174 0 77.567l329.14 329.14c21.449 21.449 56.174 21.449 77.567 0s21.449-56.174 0-77.567l-290.36-290.36 290.36-290.36c21.449-21.449 21.449-56.173 0-77.567-21.449-21.394-56.173-21.449-77.567 0z'/%3E%3C/svg%3E");
      }
      [wupdark] {
        --ctrl-bg: none;
        --ctrl-border: #104652;
        --ctrl-label: #919191;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-focus-label: #25a1b6;
        --ctrl-selected: #25a1b6;
        --ctrl-err: #ff6666;
        --ctrl-err-bg: #000;
        --ctrl-err-valid: #54d754;
      }
  :root {
      --ctrl-autofill: #00869e;
      --ctrl-clear: red;
      --ctrl-clear-hover: rgba(255,0,0,0.1);
      --ctrl-label-active-pos: translateY(calc(-100% - 0.2em)) scale(0.9);
     }
     [wupdark] {
        --ctrl-clear-hover: rgba(255,0,0,0.2);
        --ctrl-autofill: #89bc55;
        --ctrl-autofill-caret: #fff;
      }
  
      WUP-TEXTAREA {
        --ctrl-focus-border: var(--ctrl-focus);
        contain: style;
        display: block;
        margin: 20px 0;
        box-shadow: 0 0 0 1px var(--ctrl-border);
        border-radius: var(--ctrl-border-radius);
        color: var(--ctrl);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-TEXTAREA strong,
      WUP-TEXTAREA legend {
        color: var(--ctrl-label);
        pointer-events: none;
      }
      WUP-TEXTAREA[invalid],
      WUP-TEXTAREA[invalid] &gt; [menu] {
        --ctrl-focus-border: var( --ctrl-invalid-border);
        box-shadow: 0 0 3px 0 var(--ctrl-focus-border);
      }
      WUP-TEXTAREA:focus-within,
      WUP-TEXTAREA:focus-within &gt; [menu] {
        z-index: 90010;
        box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
      }
      WUP-TEXTAREA:focus-within strong,
      WUP-TEXTAREA:focus-within legend {
        color: var(--ctrl-focus-label);
        pointer-events: initial;
      }
      [disabled] WUP-TEXTAREA,
      WUP-TEXTAREA[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled] WUP-TEXTAREA &gt; label,
      WUP-TEXTAREA[disabled] &gt; label {
        pointer-events: none;
      }
      WUP-TEXTAREA label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-TEXTAREA input,
      WUP-TEXTAREA textarea {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-TEXTAREA [contenteditable=true] {
        margin: var(--ctrl-padding);
        margin-left: 0;
        margin-right: 0;
        cursor: inherit;
      }
      WUP-TEXTAREA strong {
        cursor: inherit;
      }
      WUP-TEXTAREA strong:empty {
        display: none;
      }
      WUP-TEXTAREA [aria-required="true"] + strong:after,
      WUP-TEXTAREA fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-TEXTAREA [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err);
        background: var(--ctrl-err-bg);
        overflow: auto;
        overflow: overlay;
        // text-shadow: 0 0 0 var(--ctrl-err);
      }
      WUP-TEXTAREA [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-TEXTAREA [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-TEXTAREA [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-TEXTAREA [error] li[valid] {
        color: var(--ctrl-err-valid);
      }
      WUP-TEXTAREA [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-valid);
      }
      WUP-TEXTAREA:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) and (pointer: fine) {
        WUP-TEXTAREA:hover strong,
        WUP-TEXTAREA[hovered] strong{
          color: var(--ctrl-focus-label);
        }
        WUP-TEXTAREA:hover,
        WUP-TEXTAREA:hover&gt;[menu],
        WUP-TEXTAREA[hovered],
        WUP-TEXTAREA[hovered]&gt;[menu] {
          box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
        }
      }
        WUP-TEXTAREA {
          contain: style;
          cursor: text;
        }
        WUP-TEXTAREA label &gt; span {
          width: 100%;
          position: relative;
          display: flex;
          flex-direction: row-reverse;
        }
        WUP-TEXTAREA input,
        WUP-TEXTAREA textarea,
        WUP-TEXTAREA [maskholder],
        WUP-TEXTAREA [prefix],
        WUP-TEXTAREA [postfix] {
          padding: var(--ctrl-padding);
          padding-left: 0;
          padding-right: 0;
          font: inherit;
          color: inherit;
          margin: 0;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        WUP-TEXTAREA input,
        WUP-TEXTAREA textarea,
        WUP-TEXTAREA [contenteditable=true],
        WUP-TEXTAREA [maskholder],
        WUP-TEXTAREA [postfix] {
          width: 100%;
          box-sizing: border-box;
          border: none;
          background: none;
          outline: none;
        }
        WUP-TEXTAREA [prefix],
        WUP-TEXTAREA [postfix] {
          color: inherit;
          flex-shrink: 0;
        }
        WUP-TEXTAREA [maskholder],
        WUP-TEXTAREA [prefix],
        WUP-TEXTAREA [postfix] {
          display: none;
          pointer-events: none;
          text-overflow: initial;
          white-space: pre;
        }
        WUP-TEXTAREA [postfix] {
          position: absolute;
        }
        WUP-TEXTAREA [maskholder] {
          position: absolute;
          opacity: 0.65;
        }
        WUP-TEXTAREA [maskholder]&gt;i,
        WUP-TEXTAREA [postfix]&gt;i {
          visibility: hidden;
          font: inherit;
          white-space: pre;
        }
        WUP-TEXTAREA input:-webkit-autofill,
        WUP-TEXTAREA textarea:-webkit-autofill,
        WUP-TEXTAREA [contenteditable=true]:-webkit-autofill {
          font: inherit;
          -webkit-background-clip: text;
          -webkit-text-fill-color: var(--ctrl-autofill);
          caret-color: var(--ctrl-autofill-caret, auto);
        }
        WUP-TEXTAREA input:autofill,
        WUP-TEXTAREA textarea:autofill,
        WUP-TEXTAREA [contenteditable=true]:autofill {
          font: inherit;
          background-clip: text;
          text-fill-color: var(--ctrl-autofill);
          caret-color: var(--ctrl-autofill-caret, auto);
        }
        WUP-TEXTAREA strong {
          display: block;
          position: absolute;
          top: 50%;
          left: 0;
          padding: 0;
          margin: 0;
          box-sizing: border-box;
          max-width: 100%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          transform-origin: top left;
          transform: translateY(-50%);
          font-weight: normal;
          text-decoration: none;
          -webkit-backface-visibility: hidden;
          backface-visibility: hidden; 
        }
        @media not all and (prefers-reduced-motion) {
          WUP-TEXTAREA strong {
            transition: top var(--anim), transform var(--anim), color var(--anim);
          }
        }
        WUP-TEXTAREA input:not(:focus):placeholder,
        WUP-TEXTAREA textarea:not(:focus):placeholder {
          color: transparent;
        }
        WUP-TEXTAREA:focus-within strong,
        WUP-TEXTAREA input:not(:placeholder-shown) + strong,
        WUP-TEXTAREA textarea:not(:placeholder-shown) + strong,
        WUP-TEXTAREA [contenteditable=true]:not(:empty) + strong,
        WUP-TEXTAREA legend {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-TEXTAREA input:-webkit-autofill + strong
        WUP-TEXTAREA textarea:-webkit-autofill + strong
        WUP-TEXTAREA [contenteditable=true]:-webkit-autofill + strong {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-TEXTAREA input:autofill + strong,
        WUP-TEXTAREA textarea:autofill + strong,
        WUP-TEXTAREA [contenteditable=true]:autofill + strong {
          transform: var(--ctrl-label-active-pos);
        }
        WUP-TEXTAREA:focus-within [maskholder],
        WUP-TEXTAREA:focus-within [prefix],
        WUP-TEXTAREA:focus-within [postfix],
        WUP-TEXTAREA input:not(:placeholder-shown) ~ [prefix],
        WUP-TEXTAREA input:not(:placeholder-shown) ~ [postfix],
        WUP-TEXTAREA textarea:not(:placeholder-shown) ~ [prefix],
        WUP-TEXTAREA textarea:not(:placeholder-shown) ~ [postfix] {
          display: inline-block;
        }
        /* style for icons */
        WUP-TEXTAREA label:after,
        WUP-TEXTAREA label:before {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          cursor: pointer;
          -webkit-mask-image: none;
          mask-image: none;
        }
        WUP-TEXTAREA label:after {
          margin-right: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-TEXTAREA label:before {
          margin-left: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-TEXTAREA label&gt;button {
          z-index: 1;
          contain: strict;
          font-size: inherit;
          flex: 0 0 auto;
          align-self: center;
        }
        WUP-TEXTAREA button[clear] {
          --icon-size: var(--ctrl-icon-size);
          --icon-hover-r: 24px;
          --icon-img: var(--wup-icon-cross);
          --icon: var(--ctrl-label);
          --icon-hover: var(--ctrl-clear);
          --icon-hover-bg: var(--ctrl-clear-hover);
          display: none;
          margin-right: -0.5em;
        }
        WUP-TEXTAREA button[clear=back] {
          --icon-img: var(--wup-icon-back);
        }
        WUP-TEXTAREA:focus-within button[clear] {
          display: inline-block;
          opacity: 1;
        }
        @media (hover: hover) and (pointer: fine) {
          WUP-TEXTAREA:hover button[clear] {
            display: inline-block;
            opacity: 1;
          }
        }
        WUP-TEXTAREA[disabled] button[clear],
        WUP-TEXTAREA[readonly] button[clear] {
          display: none;
          pointer-events: none;
        }
        WUP-TEXTAREA strong { top: 1.6em; }
        WUP-TEXTAREA [contenteditable=true] {
          min-height: 4em;
          max-height: 4em;
        }
  WUP-AREAINPUT {
          display: inline-block; 
          cursor: text;
          white-space: pre-wrap;
          word-break: break-word;
          overflow-wrap: break-word;
          overflow: auto;
          margin: 0; padding: 0;
        }
        
WUP-AREAINPUT::-webkit-scrollbar {
  width: 10px; height: 10px;
  cursor: pointer;
}
WUP-AREAINPUT::-webkit-scrollbar-corner {
  background: none;
  cursor: pointer;
}
WUP-AREAINPUT::-webkit-scrollbar-thumb {
  border: 3px solid rgba(0,0,0,0);
  background-clip: padding-box;
  background-color: var(--scroll, rgba(0,0,0,0.2));
  border-radius: 999px;
  cursor: pointer;
}
WUP-AREAINPUT::-webkit-scrollbar-track-piece:vertical:start,
WUP-AREAINPUT::-webkit-scrollbar-track-piece:vertical:end,
WUP-AREAINPUT::-webkit-scrollbar-track-piece:horizontal:start,
WUP-AREAINPUT::-webkit-scrollbar-track-piece:horizontal:end {
  margin: 0;
  cursor: pointer;
}
@media (hover) {
  WUP-AREAINPUT::-webkit-scrollbar-thumb:hover {
    background-color: var(--scroll-hover, rgba(0,0,0,0.5));
    cursor: pointer;
  }
}
</style>
`;

exports[`control.textarea common tests snapshot of $defaults 1`] = `
{
  "autoComplete": null,
  "autoFocus": false,
  "clearActions": 2,
  "clearButton": true,
  "debounceMs": 0,
  "disabled": false,
  "focusDebounceMs": 100,
  "label": null,
  "name": null,
  "readOnly": false,
  "selectOnFocus": false,
  "storage": "local",
  "storageKey": "",
  "validateDebounceMs": 500,
  "validationCase": 13,
  "validationRules": {
    "$alwaysInvalid": [Function],
    "$alwaysValid": [Function],
    "email": [Function],
    "max": [Function],
    "min": [Function],
    "required": [Function],
  },
  "validationShowAll": false,
  "validations": null,
}
`;

exports[`control.textarea common tests snapshot of $defaults 2`] = `undefined`;

exports[`control.textarea common tests snapshot of $defaults 3`] = `
[
  "disabled",
  "readonly",
  "w-autocomplete",
  "w-autofocus",
  "w-clearactions",
  "w-clearbutton",
  "w-debouncems",
  "w-disabled",
  "w-focusdebouncems",
  "w-initvalue",
  "w-label",
  "w-name",
  "w-readonly",
  "w-selectonfocus",
  "w-storage",
  "w-storagekey",
  "w-validatedebouncems",
  "w-validationcase",
  "w-validationrules",
  "w-validations",
  "w-validationshowall",
]
`;

exports[`control.textarea options clearButton 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt2"
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  />
</wup-textarea>
`;

exports[`control.textarea options clearButton 2`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt2"
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  />
</wup-textarea>
`;

exports[`control.textarea validations $options.validationShowAll 1`] = `
<wup-textarea
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt2"
        aria-labelledby="txt1"
        aria-multiline="true"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min length is 2 characters
      </li>
      <li>
        Max length is 3 characters
      </li>
      <li>
        Invalid email address
      </li>
    </ul>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations $options.validationShowAll 2`] = `
<wup-textarea
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt2"
        aria-labelledby="txt1"
        aria-multiline="true"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      >
        123
      </wup-areainput>
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span
      class="wup-hidden"
    >
      Invalid email address
    </span>
    <ul
      aria-hidden="true"
    >
      <li
        valid=""
      >
        Min length is 2 characters
      </li>
      <li
        valid=""
      >
        Max length is 3 characters
      </li>
      <li>
        Invalid email address
      </li>
    </ul>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations $options.validationShowAll 3`] = `
<wup-textarea
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt5"
        aria-labelledby="txt1"
        aria-multiline="true"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      >
        First Name
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 1`] = `
<wup-textarea>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-labelledby="txt1"
        aria-multiline="true"
        contenteditable="true"
        role="textbox"
      >
        123
      </wup-areainput>
      <strong
        id="txt1"
      />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 2`] = `
<wup-textarea
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt3"
        aria-labelledby="txt1"
        aria-multiline="true"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      >
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear="back"
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt3"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 3`] = `
<wup-textarea
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt4"
        aria-labelledby="txt1"
        aria-multiline="true"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      >
        123
      </wup-areainput>
      <strong
        id="txt1"
      >
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt4"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea validations options.validationCase 4`] = `
<wup-textarea
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <wup-areainput
        aria-describedby="txt5"
        aria-labelledby="txt1"
        aria-multiline="true"
        aria-required="true"
        contenteditable="true"
        role="textbox"
      />
      <strong
        id="txt1"
      >
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
      wup-icon=""
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-textarea>
`;

exports[`control.textarea with form 1`] = `
<wup-form
  role="form"
>
  <wup-textarea>
    <label
      for="txt1"
    >
      <span>
        <wup-areainput
          aria-labelledby="txt1"
          aria-multiline="true"
          contenteditable="true"
          role="textbox"
        />
        <strong
          id="txt1"
        >
          First Input
        </strong>
      </span>
      <button
        aria-hidden="true"
        clear=""
        tabindex="-1"
        type="button"
        wup-icon=""
      />
    </label>
  </wup-textarea>
</wup-form>
`;
